--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/webp" href="/logoa.webp" />
+  <link rel="canonical" href="https://calculadora-asistencias.vercel.app/" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calculadora de Asistencias</title>
+  <link rel="manifest" href="/manifest.json" />
   <meta name="description"
     content="Calcula fácilmente tus asistencias y faltas por materia. Ideal para estudiantes que no quieren perder el curso.">
   <meta name="keywords" content="asistencia, inasistencia, cálculo, faltas, clases, alumnos">
   <meta property="og:title" content="Calculadora de Asistencias" />
   <meta property="og:description" content="Controla tus faltas y mejora tu rendimiento académico." />
   <meta property="og:image" content="https://calculadora-asistencias.vercel.app/logo.webp" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:url" content="https://calculadora-asistencias.vercel.app/" />
   <meta property="og:type" content="website" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3586374758158042"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
